--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,15 +12,31 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.guohao.schoolproject.ShowActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity 
+            android:name="com.guohao.schoolproject.LoginActivity">
+            
+        </activity>
+        <activity 
+            android:name="com.guohao.schoolproject.RegisteActivity">
+            
+        </activity>
+        <activity 
+            android:name="com.guohao.schoolproject.ForgetPwdActivity">
+            
+        </activity>
+        <activity 
+            android:name="com.guohao.schoolproject.MainActivity">
+            
         </activity>
     </application>
 
