13-完成碎片01点击后的第二层界面布局

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:name="com.guohao.schoolproject.MainActivity">
             
         </activity>
+        <activity 
+            android:name="com.guohao.schoolproject.AnswerShowActivity">
+            
+        </activity>
     </application>
 
 </manifest>
