--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -48,6 +50,14 @@
         </activity>
         <activity 
             android:name="com.guohao.schoolproject.SettingActivity">
+            
+        </activity>
+        <activity 
+            android:name="com.guohao.schoolproject.ExamDetail">
+            
+        </activity>
+        <activity 
+            android:name="com.guohao.schoolproject.ChapterListActivity">
             
         </activity>
     </application>
