--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK/library"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/library"/>
+	<classpathentry exported="true" kind="lib" path="libs/universal-image-loader-1.9.5.jar"/>
+	<classpathentry kind="lib" path="libs/asynchttpclient.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
