--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,10 +11,12 @@
     
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:name="com.guohao.schoolproject.App"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
             android:name="com.guohao.schoolproject.ShowActivity"
