35-更改试题选项背景img，完成背景img切换，分数提交；接下来分数展示，和答题未完成的继续答题

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,6 +68,10 @@
             android:name="com.guohao.schoolproject.StartExamActivity">
             
         </activity>
+        <activity 
+            android:name="com.guohao.schoolproject.ExamGrade">
+            
+        </activity>
     </application>
 
 </manifest>
