--- a/.classpath
+++ b/.classpath
@@ -9,6 +9,6 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/library"/>
 	<classpathentry exported="true" kind="lib" path="libs/universal-image-loader-1.9.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/asynchttpclient.jar"/>
-	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
